# content-extraction-tool

./: .gitignore  README.md  pyproject.toml  start.ps1  todo.md  venv.ps1
src/: act.py  pyproject.toml  service.py  venv.ps1  venv.sh  web.py
src/app/: App.py  AppConsole.py  Config.py  Logger.py
src/app/Config/: DefaultSettings.py  __init__.py
src/app/Logger/: LogFile.py  LogKind.py  LogMessage.py  LogSection.py  LogSkipSection.py  __init__.py
src/app/Storage/: HashDirectory.py  StorageItemHashList.py  __init__.py
src/db/: DbConnection.py  LinkManager.py  ModelDTO.py
src/db/Export/: ArchiveExport.py
src/db/LinkManager/: LinkItems.py  __init__.py
src/db/Links/: ContentUnitRelation.py  LinkManager.py  Relations.py
src/db/Models/: BaseModel.py
src/declarable/: ArgsComparer.py  ArgsDict.py  ArgsHashTable.py  Documentation.py  ExecutableConfig.py
src/declarable/Arguments/: Argument.py  __init__.py
src/executables/: ExecutableCall.py  ExecutableMap.py
src/executables/templates/: Confirmable.py  Documentable.py  EnvContainable.py  Executable.py  Linkable.py  Progressable.py  RecursiveDeclarable.py  Runnable.py  Saveable.py  Sectionable.py  Submodulable.py
src/resources/: Cached.py  Consts.py  DefaultSettings.py  Exceptions.py
src/storage/: Storage.py  StorageItem.py  TempStorage.py
src/tests/: ImageTest.py  TextTest.py
src/thumbnails/: ImageMethod.py  __init__.py
src/tool/: act.py  web.py
src/tool/App/: App.py  (+1 more)
src/utils/: Configurable.py  Hookable.py  Increment.py  JSONContentContainer.py  MainUtils.py  MediaUtils.py  Util.py  WebUtils.py
(+582 files in other folders)
