[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[egg_info]
egg_base = "target"

[project]
name = "content-extraction-tool"
version = "0.0.1"
dependencies  = ["asyncio==3.4.3", "aiohttp==3.11.12", "peewee==3.17.6", "pymysql", "snowflake-id", "requests==2.32.3", "urllib3==2.2.3", "pillow<11.0", "idna==3.10", "certifi==2024.8.30", "xmltodict", "pycryptodomex", "colorama", "json5==0.10.0", "Brotli==1.1.0", "charset-normalizer==3.3.2"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
